# portfolio-gen

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  WORKFLOWS.md  publish.py  push_changes.py  pyproject.toml  requirements.txt  setup.py  test_commands.py
.github/workflows/: publish.yml  release.yml  test.yml
portfoliogen/: __init__.py  cli.py  generator.py
portfoliogen/templates/developer/: index.html  script.js  styles.css
portfoliogen/templates/photographer/: index.html  script.js  styles.css
