[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfoliogen"
version = "1.0.3"
description = "Automatic portfolio project generator"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sameer Lamichhane", email = "sameerlamichhane00@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["portfolio", "generator", "html", "css", "javascript", "web", "development"]
requires-python = ">=3.7"
dependencies = [
    'importlib-resources>=1.3.0; python_version<"3.9"'
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "twine>=3.0",
    "build>=0.7.0"
]

[project.scripts]
portfoliogen = "portfoliogen.cli:main"

[project.urls]
Homepage = "https://github.com/sameer-lamichhane/portfolio-gen"
Repository = "https://github.com/sameer-lamichhane/portfolio-gen"
Issues = "https://github.com/sameer-lamichhane/portfolio-gen/issues"
Documentation = "https://github.com/sameer-lamichhane/portfolio-gen#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["portfoliogen*"]

[tool.setuptools.package-data]
portfoliogen = ["templates/*/*.html", "templates/*/*.css", "templates/*/*.js"]